# neuro-san-demos

./: .dockerignore  .env  .env.example  .gitattribute  .gitignore  AGENTS.md  Makefile  README.md  benchmark.py  build_local  condensed AGENTS.md  docker-compose.yml  environment.yml  gemini.md  gemini2.md  install.sh  langchain_google_genai.py  package_release.py  package_release.sh  package_windows_exe.py  pyproject.toml  render.yaml  requirements-build.txt  requirements.in  requirements.txt  run.py  run_app.sh  setup.sh  start.sh  test_mcp_server.py  your_module.py
agents--features and memory/: #10_Real-Time_Court_Presentation_y_Timeline_Sync.md  #1_Automated_Privilege_detection_y_redaction.md  #2_Bates_Stamping_y_Versioning.md  #3_legal_theory_mapping.md  #4_Deposition_prep_generator.md  #5_Exhibit_y_Trial_Binder_Creator.md  #6_CoCounsel_Chat_+_AI_Memory.md  #7_Forensic_Chain_of_Custody.md  #8_Opposition_Document_Tracker.md  #9_Bonus_Moonshot_Shit.md  #9_Bonus_Mooonshot_Shit.md  condensed_agents.md  roadmap to the fyutchaaaaa! --integration notes.md  roadmap_to_the_fyutchaaaaa!.md
apps/: __init__.py  message_bus.py
cctns_copilot/: README.md  app.py  requirements.txt
coded_tools/: base_rag.py  ddgs_search.py  docling_rag.py
config/: .env.sample  __init__.py  config.py
deploy/: Dockerfile  deploy_production.sh  deploy_staging.sh  entrypoint.sh  prometheus_alerts.yml  run.sh  seed_postgres.py  start_data_services.sh
dev/: Dockerfile  build_local.ps1  build_local.sh  entrypoint.sh
docs/: GEO_README.md  PRP-neuro-san-studio-2.md  api_key.md  benchmarking.md  dataiku_mcp.md  deployment.md  dev_guide.md  examples.md  memory_bank.md  tutorial.md  user_guide.md  voice_assistant.md
neuro_san/: __init__.py
registries/: GEO.hocon  LinkedInJobSeekerSupportNetwork.hocon  a2a_research_report.hocon  aaosa_basic.hocon  advanced_calculator.hocon  agent_network_architect.hocon  agent_network_designer.hocon  agent_network_html_creator.hocon  agentforce.hocon  agentic_rag.hocon  agentspace_adapter.hocon  airbnb.hocon  airline_policy.hocon  banking_ops.hocon  booking.hocon  brave_search.hocon  carmax.hocon  coffee_finder_advanced.hocon  confluence_rag.hocon  conscious_agent.hocon  consumer_decision_assistant.hocon  country_news_analysis.hocon  cpg_agents.hocon  cruse_agent.hocon  dataiku.hocon  dataiku_mcp.hocon  dataiku_mcp_v2.hocon  dataiku_v2.hocon  dataiku_v3.hocon  default-llm  expedia.hocon  gmail.hocon  google_search.hocon  healthcare_assistant.hocon  hello_world.hocon  (+36 more)
(+338 files in other folders)
