[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neuro-san-studio"
version = "0.1.0"
description = "Backend components for Neuro SAN Studio"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE.txt"}
authors = [{name = "Neuro SAN"}]
dependencies = [
    "neuro-san>=0.5.52",
    "Flask",
    "Flask-SocketIO",
    "Flask-Limiter",
    "redis>=5.0.0",
    "rq>=1.15.1",
    "python-dotenv>=1.0.1",
    "gunicorn",
    "pandas",
    "prometheus-client>=0.20.0",
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-instrumentation-flask",
]

[tool.setuptools.packages.find]
include = ["neuro_san*", "apps*", "coded_tools*"]
description = "Neuro SAN Studio backend"
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "Cognizant AI Lab"}]
dependencies = []

[tool.isort]
profile = "black"
src_paths = ["apps", "coded_tools", "tests"]
line_length = 119
known_first_party = ["apps"]

[tool.flake8]
extend-ignore = ["W503", "E203"]
max-line-length = 119

[tool.black]
line-length = 119
required-version = "25.1.0"

[tool.pylint]
max-line-length = 119
# Based on Google Python Style Guide
disable = [
    "C0301",  # Line too long (handled by black)
    "C0114",  # Missing module docstring (missing-module-docstring)
    # This repo contains examples that should remain independent, so we expect some level of copy/paste
    "R0801",  # Similar lines in 2 files
    "W0511",  # TODO/FIXME comments
    ]
good-names = ["i", "j", "k", "ex", "_", "id", "f", "db", "e"]
ignore-patterns = [".*checkpoint\\.py"]
ignore-paths = ["^venv/.*$", "^.*/\\.venv/.*$"]
# Google style requires docstrings
enable = [
    "useless-suppression",
]
# Google style naming conventions
const-naming-style = "UPPER_CASE"
function-naming-style = "snake_case"
class-naming-style = "PascalCase"
method-naming-style = "snake_case"
attr-naming-style = "snake_case"
argument-naming-style = "snake_case"
variable-naming-style = "snake_case"
inlinevar-naming-style = "snake_case"
# Additional settings
fail-under = 10.0
output-format = "colorized"
init-import = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--verbose --cov=. --cov-report=term-missing --no-cov-on-fail"

[tool.coverage.run]
omit = ["tests/*", "*/venv/*"]
